GK-7 Init swagger